Default changes missed in default merge into branch: new class ArbitrarySourceProfile, FluenceOfXAndYAndZ mods to use absorption weighting method, mods to new R(fx,t),R(fx) to remove obsolete interface methods, mods to R(rho,omega) to not bin in omega.
--HG--
branch : ch-110906-tally_refactoring

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -812,6 +812,9 @@
     <Compile Include="..\Vts\MonteCarlo\Helpers\SourceFlags.cs">
       <Link>MonteCarlo\Helpers\SourceFlags.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Helpers\SourceProfiles\ArbitrarySourceProfile.cs">
+      <Link>MonteCarlo\Helpers\SourceProfiles\ArbitrarySourceProfile.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Helpers\SourceProfiles\FlatSourceProfile.cs">
       <Link>MonteCarlo\Helpers\SourceProfiles\FlatSourceProfile.cs</Link>
     </Compile>
