Renamed RussianRouletteWeightLimit to RussianRouletteWeightThreshold to be more descriptive. Injected RussianRouletteWeightThreshold into Photon via Tissue. Updated ITissue to require RussianRouletteWeightThreshold and modified tissue types in TissueFactory. Modified PhotonDatabasePostProcessorTests check for file generation.  I need a new method in FileIO that performs a File.Exists check in isolated storage. Found that a unit test in Vts.Desktop.Test was pointing to PhotonDatabasePostProcessor rather than PhotonDatabasePostProcessorTests.

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -261,6 +261,9 @@
     <Compile Include="..\Vts.Test\MonteCarlo\PhotonData\pMCDatabaseTests.cs">
       <Link>MonteCarlo\PhotonData\pMCDatabaseTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\PostProcessing\PhotonDatabasePostProcessorTests.cs">
+      <Link>MonteCarlo\PostProcessing\PhotonDatabasePostProcessorTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Rng\SerializableMersenneTwisterTests.cs">
       <Link>MonteCarlo\Rng\SerializableMersenneTwisterTests.cs</Link>
     </Compile>
@@ -272,9 +275,6 @@
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Sources\SurfaceEmittingFlatSourcesTests.cs">
       <Link>MonteCarlo\Sources\SurfaceEmittingFlatSourcesTests.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\PostProcessing\PhotonDatabasePostProcessor.cs">
-      <Link>MonteCarlo\PostProcessing\PhotonDatabasePostProcessor.cs</Link>
     </Compile>
     <Compile Include="FileIOTests.Desktop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
