Sampled MCCL infiles were previously put in common folder ("files" at src level) to share files between Vts.MonteCarlo and Monte Carlo View Model.  This is no longer needed because MC View Model generates its own infiles. Removed Vts.MonteCarlo.Resources.DataStructures.SimulationInput folder and sample infiles. Removed post-build event in MCCL and MCPP to copy files to the "files" folder. Removed the files.SimulationInputFiles and files.PostProcessorInputFiles folders and files.

--- a/src/Vts.MonteCarlo.CommandLineApplication/Vts.MonteCarlo.CommandLineApplication.csproj
+++ b/src/Vts.MonteCarlo.CommandLineApplication/Vts.MonteCarlo.CommandLineApplication.csproj
@@ -157,7 +157,6 @@ IF NOT EXIST "$(SolutionDir)..\build\apps\mc\$(ConfigurationName)" mkdir "$(Solu
 copy "$(TargetDir)\*.*" "$(SolutionDir)..\build\apps\mc\$(ConfigurationName)" /y
 
 "$(TargetDir)mc.exe" geninfiles
-
-copy "$(TargetDir)infile_*.xml" "$(SolutionDir)..\files\SimulationInputFiles\"</PostBuildEvent>
+</PostBuildEvent>
   </PropertyGroup>
 </Project>
