--- a/src/Vts.SiteVisit.Test/Vts.SiteVisit.Test.csproj
+++ b/src/Vts.SiteVisit.Test/Vts.SiteVisit.Test.csproj
@@ -99,6 +99,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\tools\nunit\Silverlight\Microsoft.VisualStudio.QualityTools.UnitTesting.Silverlight.dll</HintPath>
     </Reference>
+    <Reference Include="NUnit.Silverlight.Compatibility, Version=2010.11.1.0, Culture=neutral, PublicKeyToken=fe50801526d50c78, processorArchitecture=MSIL" />
     <Reference Include="NUnit.Silverlight.Framework">
       <HintPath>..\..\tools\nunit\Silverlight\NUnit.Silverlight.Framework.dll</HintPath>
     </Reference>
