Took PhotonDatabasePostProcessor from dcuccia 3 pushes prior and merged in my PostProcessorStatistics changes.

--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -123,6 +123,9 @@
       <HintPath>..\..\lib\RxFramework\SL4\System.Reactive.dll</HintPath>
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Threading.Tasks">
+      <HintPath>..\..\lib\TasksSL\System.Threading.Tasks.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows" />
     <Reference Include="mscorlib" />
     <Reference Include="system" />
@@ -574,6 +577,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="MonteCarlo\DataStructuresValidation\DetectorInputs\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\$(SilverlightVersion)\Microsoft.Silverlight.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
