--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -566,6 +566,9 @@
     <Compile Include="..\Vts\MonteCarlo\DataStructures\DetectorInputs\FluenceOfXAndYAndZDetectorInput.cs">
       <Link>MonteCarlo\DataStructures\DetectorInputs\FluenceOfXAndYAndZDetectorInput.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\DataStructures\DetectorInputs\pMCROfFxAndTimeDetectorInput.cs">
+      <Link>MonteCarlo\DataStructures\DetectorInputs\pMCROfFxAndTimeDetectorInput.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\DataStructures\DetectorInputs\pMCROfFxDetectorInput.cs">
       <Link>MonteCarlo\DataStructures\DetectorInputs\pMCROfFxDetectorInput.cs</Link>
     </Compile>
@@ -739,6 +742,9 @@
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\Detectors\MomentumTransferOfRhoAndZDetector.cs">
       <Link>MonteCarlo\Detectors\MomentumTransferOfRhoAndZDetector.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Detectors\pMCROfFxAndTimeDetector.cs">
+      <Link>MonteCarlo\Detectors\pMCROfFxAndTimeDetector.cs</Link>
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\Detectors\pMCROfFxDetector.cs">
       <Link>MonteCarlo\Detectors\pMCROfFxDetector.cs</Link>
