--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -215,6 +215,7 @@
     <Compile Include="MonteCarlo\Controllers\VirtualBoundaryController.cs" />
     <Compile Include="MonteCarlo\DataStructuresValidation\PostProcessorInputs\PostProcessorInputValidation.cs" />
     <Compile Include="MonteCarlo\DataStructuresValidation\TissueInputs\SingleEllipsoidTissueInputValidation.cs" />
+    <Compile Include="MonteCarlo\DataStructures\DetectorInputs\pMCROfFxAndTimeDetectorInput.cs" />
     <Compile Include="MonteCarlo\DataStructures\DetectorInputs\pMCROfFxDetectorInput.cs" />
     <Compile Include="MonteCarlo\DataStructures\DetectorInputs\FluenceOfXAndYAndZDetectorInput.cs" />
     <Compile Include="MonteCarlo\DataStructures\DetectorInputs\ROfFxAndTimeDetectorInput.cs" />
@@ -231,6 +232,7 @@
     <Compile Include="MonteCarlo\DataStructures\SourceInputs\PointAndLineSources\LineSourceInputs\IsotropicLineSourceInput.cs" />
     <Compile Include="MonteCarlo\DataStructures\SourceInputs\SourceInputProvider.cs" />
     <Compile Include="MonteCarlo\DataStructures\TissueInputs\MultiLayerTissueInput.cs" />
+    <Compile Include="MonteCarlo\Detectors\pMCROfFxAndTimeDetector.cs" />
     <Compile Include="MonteCarlo\Detectors\pMCROfFxDetector.cs" />
     <Compile Include="MonteCarlo\Detectors\FluenceOfXAndYAndZDetector.cs" />
     <Compile Include="MonteCarlo\Detectors\ROfFxAndTimeDetector.cs" />
